fix some home page content and page navigation, media diplay settings now converts too grid on small screens

--- a/docs/assets/css/index.css
+++ b/docs/assets/css/index.css
@@ -252,6 +252,26 @@
     }
   }
 
+  @media (max-width: 480px) {
+    .main-body .hero-links {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        width: 100%;
+        gap: 0.5em;
+    }
+
+    .main-body .hero-link {
+        width: 100%;
+        text-align: center;
+        padding: 0;
+        font-size: 1em;
+    }
+
+    .main-body .hero-links-container {
+        padding: 0.5em;
+    }
+}
+
   .project-cards, .blog-cards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
